# rsi

./: Cargo.toml  README.md  tmp.txt
.github/workflows/: release.yaml
src/: jobinfo.rs  main.rs  starttime.rs
