[package]
name = "rsi"
version = "0.1.0"
edition = "2021"
authors = ["Simon Mutch <smutch.astro@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
env_logger = "0.9.0"
eyre = "0.6.8"
log = "0.4.17"
tabled = { version = "0.8.0", features = ["color"] }
terminal_size = "0.2.1"
console = "0.15"
tempfile = "3.3.0"
